--- a/src/app/components/modal/change-password-dialog/change-password-dialog.component.html
+++ b/src/app/components/modal/change-password-dialog/change-password-dialog.component.html
@@ -1,4 +1,4 @@
-<h2 mat-dialog-title>Change Password</h2>
+<h2 mat-dialog-title>{{ "MODALS.CHANGE_PASSWORD" | translate }}</h2>
 <button mat-icon-button mat-dialog-close class="close-button">
   <mat-icon aria-label="Close dialog">close</mat-icon>
 </button>
@@ -7,7 +7,7 @@
   <mat-form-field appearance="fill">
     <input
       matInput
-      placeholder="Current Password"
+      [placeholder]="'MODALS.CURRENT_PASSWORD' | translate"
       type="password"
       [(ngModel)]="currentPassword"
     />
@@ -15,13 +15,17 @@
   <mat-form-field appearance="fill">
     <input
       matInput
-      placeholder="New Password"
+      [placeholder]="'MODALS.NEW_PASSWORD' | translate"
       type="password"
       [(ngModel)]="newPassword"
     />
   </mat-form-field>
 </mat-dialog-content>
 <mat-dialog-actions align="end">
-  <button mat-button color="warn" (click)="closeDialog()">Cancel</button>
-  <button mat-button color="primary" (click)="updatePassword()">Save</button>
+  <button mat-button color="warn" (click)="closeDialog()">
+    {{ "INPUT_TEXT.CANCEL" | translate }}
+  </button>
+  <button mat-button color="primary" (click)="updatePassword()">
+    {{ "INPUT_TEXT.SAVE" | translate }}
+  </button>
 </mat-dialog-actions>
