--- a/src/app/components/auth/login/login.component.html
+++ b/src/app/components/auth/login/login.component.html
@@ -1,10 +1,12 @@
 <div class="container">
   <div class="mat-card login-container">
-    <mat-card-title class="login_title">Login</mat-card-title>
+    <mat-card-title class="login_title">
+      {{ "AUTH.LOGIN" | translate }}</mat-card-title
+    >
     <mat-card-content>
       <form (ngSubmit)="onSubmit(loginForm)" #loginForm="ngForm">
         <mat-form-field appearance="fill" class="login_input">
-          <mat-label>Email</mat-label>
+          <mat-label> {{ "AUTH.EMAIL" | translate }}</mat-label>
           <input
             matInput
             type="email"
@@ -15,7 +17,7 @@
           />
         </mat-form-field>
         <mat-form-field appearance="fill" class="login_input">
-          <mat-label>Password</mat-label>
+          <mat-label> {{ "AUTH.PASSWORD" | translate }}</mat-label>
           <input
             matInput
             [type]="showPassword ? 'text' : 'password'"
@@ -43,7 +45,7 @@
               'fas fa-spin fa-spinner': isLoading,
             }"
           ></i>
-          Login
+          {{ "AUTH.LOGIN" | translate }}
         </button>
         <!-- <button mat-button (click)="forgotPassword()">Forgot Password</button> -->
         <div *ngIf="error" class="error">{{ error }}</div>
