--- a/src/app/components/category/category-table/category.component.html
+++ b/src/app/components/category/category-table/category.component.html
@@ -1,25 +1,27 @@
 <div class="category-page container">
   <div class="back_button_container">
-    <button mat-button color="primary" (click)="goBack()">Back</button>
+    <button mat-button color="primary" (click)="goBack()">
+      {{ "INPUT_TEXT.BACK" | translate }}
+    </button>
   </div>
   <div class="filter-container">
     <mat-form-field class="filter-field">
-      <mat-label>Filter</mat-label>
+      <mat-label>{{ "INPUT_TEXT.FILTER" | translate }}</mat-label>
       <input
         matInput
         (keyup)="applyFilter($event)"
-        placeholder="Filter by name"
+        [placeholder]="'INPUT_TEXT.FILTER_PLACEHOLDER' | translate"
         #input
       />
     </mat-form-field>
-    <div  class="actions-container">
+    <div class="actions-container">
       <button
         mat-raised-button
         color="primary"
         class="recipe-button"
         (click)="goToStatistics()"
       >
-        Statistics
+        {{ "CATEGORY.STATISTICS" | translate }}
       </button>
       <button
         mat-raised-button
@@ -27,7 +29,7 @@
         class="add-category-button"
         (click)="openOperationModal('add', null)"
       >
-        Add Category
+        {{ "CATEGORY.ADD_CATEGORY" | translate }}
       </button>
     </div>
   </div>
@@ -75,7 +77,7 @@
       </div>
     </ng-container>
     <ng-template #noCategories>
-      <p>Nu există categorii disponibile momentan.</p>
+      <p>{{ "CATEGORY.NO_CATEGORY" | translate }}</p>
     </ng-template>
   </div>
   <div *ngIf="isLoading" class="loading-circle-container">
@@ -87,6 +89,5 @@
     [pageSize]="pageSize"
     [pageSizeOptions]="pageSizeOptions"
     (page)="onPageChange($event)"
-    aria-label="Select page of users"
   ></mat-paginator>
 </div>
