--- a/src/app/components/ingredient/ingredient-modal/ingredient-modal.component.html
+++ b/src/app/components/ingredient/ingredient-modal/ingredient-modal.component.html
@@ -8,17 +8,17 @@
 <mat-dialog-content class="dialog-content">
   <form [formGroup]="ingredientForm">
     <mat-form-field class="form-field">
-      <mat-label>Name</mat-label>
+      <mat-label>{{ "CATEGORY.NAME" | translate }}</mat-label>
       <input matInput formControlName="name" required />
     </mat-form-field>
 
     <mat-form-field class="form-field">
-      <mat-label>Description</mat-label>
+      <mat-label>{{ "CATEGORY.DESCRIPTION" | translate }}</mat-label>
       <textarea matInput formControlName="description" required></textarea>
     </mat-form-field>
     <div class="input_file_container">
       <button type="button" mat-raised-button (click)="fileInput.click()">
-        Choose File
+        {{ "INPUT_TEXT.CHOOSE_FILE" | translate }}
       </button>
       <input
         hidden
@@ -33,8 +33,10 @@
 </mat-dialog-content>
 
 <mat-dialog-actions class="dialog-actions" align="end">
-  <button mat-button class="cancel-button" (click)="onNoClick()">Cancel</button>
+  <button mat-button class="cancel-button" (click)="onNoClick()">
+    {{ "INPUT_TEXT.CANCEL" | translate }}
+  </button>
   <button mat-raised-button color="primary" (click)="onSaveClick()">
-    Save
+    {{ "INPUT_TEXT.SAVE" | translate }}
   </button>
 </mat-dialog-actions>
