--- a/src/app/components/ingredient/ingredient-quantity/ingredient-quantity-modal/ingredient-quantity-modal.component.html
+++ b/src/app/components/ingredient/ingredient-quantity/ingredient-quantity-modal/ingredient-quantity-modal.component.html
@@ -8,12 +8,12 @@
 <mat-dialog-content class="dialog-content">
   <form [formGroup]="ingredientQuantityForm">
     <mat-form-field class="form-field">
-      <mat-label>Amount</mat-label>
+      <mat-label> {{ "INGREDIENT.AMOUNT" | translate }}</mat-label>
       <input matInput type="number" formControlName="amount" required />
     </mat-form-field>
 
     <mat-form-field appearance="fill" class="form-field">
-      <mat-label>Unit</mat-label>
+      <mat-label>{{ "INGREDIENT.UNIT" | translate }}</mat-label>
       <mat-select formControlName="unit" required>
         <mat-option *ngFor="let unitOption of unit" [value]="unitOption">{{
           unitOption
@@ -22,12 +22,12 @@
     </mat-form-field>
 
     <mat-form-field class="form-field">
-      <mat-label>Price/Unit</mat-label>
+      <mat-label>{{ "INGREDIENT.PRICE" | translate }}</mat-label>
       <input matInput formControlName="price" required />
     </mat-form-field>
 
     <mat-form-field appearance="fill" class="form-field">
-      <mat-label>Currency</mat-label>
+      <mat-label>{{ "INGREDIENT.CURRENCY" | translate }}</mat-label>
       <mat-select formControlName="currency" required>
         <mat-option
           *ngFor="let currencyOption of currency"
@@ -38,7 +38,7 @@
     </mat-form-field>
 
     <mat-form-field class="form-field">
-      <mat-label>Expiring Date</mat-label>
+      <mat-label>{{ "INGREDIENT.EXPIRING_DATE" | translate }}</mat-label>
       <input
         matInput
         [matDatepicker]="expiringDatePicker"
@@ -52,7 +52,7 @@
     </mat-form-field>
 
     <mat-form-field class="form-field">
-      <mat-label>Date Of Purchase</mat-label>
+      <mat-label>{{ "INGREDIENT.DATE_OF_PURCHASE" | translate }}</mat-label>
       <input
         matInput
         [matDatepicker]="dateOfPurchasePicker"
@@ -68,8 +68,10 @@
 </mat-dialog-content>
 
 <mat-dialog-actions class="dialog-actions" align="end">
-  <button mat-button class="cancel-button" (click)="onNoClick()">Cancel</button>
+  <button mat-button class="cancel-button" (click)="onNoClick()">
+    {{ "INPUT_TEXT.CANCEL" | translate }}
+  </button>
   <button mat-raised-button color="primary" (click)="onSaveClick()">
-    Save
+    {{ "INPUT_TEXT.SAVE" | translate }}
   </button>
 </mat-dialog-actions>
