--- a/src/app/components/ingredient/ingredient-quantity/ingredient-quantity-table/ingredient-quantity-table.component.html
+++ b/src/app/components/ingredient/ingredient-quantity/ingredient-quantity-table/ingredient-quantity-table.component.html
@@ -1,18 +1,30 @@
 <div class="container">
   <div class="back_button_container">
-    <button mat-button color="primary" (click)="goBack()">Back</button>
+    <button mat-button color="primary" (click)="goBack()">
+      {{ "INPUT_TEXT.BACK" | translate }}
+    </button>
   </div>
-  <div class="title_container">Quantity {{ ingredintName }}</div>
+  <div class="title_container">
+    {{ "INGREDIENT.QUANTITY" | translate }} {{ ingredintName }}
+  </div>
 
   <div class="action-dropdown">
     <button mat-raised-button [matMenuTriggerFor]="menu" color="primary">
-      Actions
+      {{ "INPUT_TEXT.ACTIONS" | translate }}
     </button>
     <mat-menu #menu="matMenu" class="action-menu">
-      <button mat-menu-item (click)="openEmailModal()">Send Email</button>
-      <button mat-menu-item (click)="exportToCSV()">Export CSV</button>
-      <button mat-menu-item (click)="exportToXLSX()">Export XLSX</button>
-      <button mat-menu-item (click)="exportToPDF()">Export PDF</button>
+      <button mat-menu-item (click)="openEmailModal()">
+        {{ "INPUT_TEXT.SEND_EMAIL" | translate }}
+      </button>
+      <button mat-menu-item (click)="exportToCSV()">
+        {{ "INPUT_TEXT.EXPORT_CSV" | translate }}
+      </button>
+      <button mat-menu-item (click)="exportToXLSX()">
+        {{ "INPUT_TEXT.EXPORT_XLSX" | translate }}
+      </button>
+      <button mat-menu-item (click)="exportToPDF()">
+        {{ "INPUT_TEXT.EXPORT_PDF" | translate }}
+      </button>
       <button
         mat-menu-item
         [useExistingCss]="true"
@@ -20,14 +32,19 @@
         ngxPrint
         styleSheetFile="assets/css/print-table.css"
       >
-        Print Table
+        {{ "INPUT_TEXT.PRINT_TABLE" | translate }}
       </button>
     </mat-menu>
   </div>
   <div class="filter-container">
     <mat-form-field class="filter-field">
-      <mat-label>Filter</mat-label>
-      <input matInput (keyup)="applyFilter($event)" #input />
+      <mat-label>{{ "INPUT_TEXT.FILTER" | translate }}</mat-label>
+      <input
+        matInput
+        (keyup)="applyFilter($event)"
+        #input
+        [placeholder]="'INPUT_TEXT.FILTER_PLACEHOLDER' | translate"
+      />
     </mat-form-field>
     <button
       mat-raised-button
@@ -36,7 +53,7 @@
       *ngIf="ingredientId !== 0"
       (click)="openOperationModal('add', null)"
     >
-      Add Quantity
+      {{ "INGREDIENT.ADD_QUANTITY" | translate }}
     </button>
   </div>
 
@@ -50,19 +67,25 @@
 
       <!-- Name Column -->
       <ng-container matColumnDef="amount">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Amount</th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>
+          {{ "INGREDIENT.AMOUNT" | translate }}
+        </th>
         <td mat-cell *matCellDef="let row">{{ row.amount }}</td>
       </ng-container>
 
       <!-- Unit Column -->
       <ng-container matColumnDef="unit">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Unit</th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>
+          {{ "INGREDIENT.UNIT" | translate }}
+        </th>
         <td mat-cell *matCellDef="let row">{{ row.unit }}</td>
       </ng-container>
 
       <!-- Price Column -->
       <ng-container matColumnDef="price">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Price/Unit</th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>
+          {{ "INGREDIENT.PRICE" | translate }}
+        </th>
         <td mat-cell *matCellDef="let row">
           {{ convertPrice(row.price, row.currency) }}
         </td>
@@ -70,7 +93,9 @@
 
       <!-- Expiring Date Column -->
       <ng-container matColumnDef="expiringDate">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Expiring Date</th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>
+          {{ "INGREDIENT.EXPIRING_DATE" | translate }}
+        </th>
         <td
           mat-cell
           *matCellDef="let row"
@@ -92,7 +117,7 @@
       <!-- Date Of Purchase Column -->
       <ng-container matColumnDef="dateOfPurchase">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>
-          Date Of Purchase
+          {{ "INGREDIENT.DATE_OF_PURCHASE" | translate }}
         </th>
         <td mat-cell *matCellDef="let row">
           {{ row.dateOfPurchase | date : "yyyy-MM-dd" }}
@@ -124,16 +149,13 @@
 
       <tr class="mat-row" *matNoDataRow>
         <td class="mat-cell" colspan="4">
-          No data matching the filter "{{ input.value }}"
+          {{ "INPUT_TEXT.NO_DATA" | translate }} "{{ input.value }}"
         </td>
       </tr>
     </table>
     <div *ngIf="isLoading" class="loading-circle-container">
       <mat-spinner diameter="100"></mat-spinner>
     </div>
-    <mat-paginator
-      [pageSizeOptions]="[5, 10, 25, 100]"
-      aria-label="Select page of users"
-    ></mat-paginator>
+    <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]"></mat-paginator>
   </div>
 </div>
