--- a/src/app/components/modal/email-modal/email-modal.component.html
+++ b/src/app/components/modal/email-modal/email-modal.component.html
@@ -1,5 +1,5 @@
 <h2 mat-dialog-title>
-  Send Email
+  {{ "INPUT_TEXT.SEND_EMAIL" | translate }}
   <button mat-icon-button mat-dialog-close class="close-button">
     <mat-icon aria-label="Close dialog">close</mat-icon>
   </button>
@@ -8,43 +8,40 @@
   <!-- Email form fields -->
   <div class="form-group">
     <mat-form-field appearance="fill">
-      <mat-label>Recipient Email</mat-label>
+      <mat-label>{{ "MODALS.RECIPIENT_EMAIL" | translate }}</mat-label>
       <input matInput type="email" [(ngModel)]="emailData.email" />
     </mat-form-field>
   </div>
   <div class="form-group">
     <mat-form-field appearance="fill">
-      <mat-label>Subject</mat-label>
+      <mat-label>{{ "MODALS.SUBJECT" | translate }}</mat-label>
       <input matInput type="text" [(ngModel)]="emailData.subject" />
     </mat-form-field>
   </div>
   <div class="form-group">
     <mat-form-field appearance="fill">
-      <mat-label>Message</mat-label>
+      <mat-label> {{ "MODALS.MESSAGE" | translate }}</mat-label>
       <textarea matInput rows="5" [(ngModel)]="emailData.message"></textarea>
     </mat-form-field>
   </div>
   <div class="form-group">
     <button type="button" mat-raised-button (click)="fileInput.click()">
-      Choose File
+      {{ "INPUT_TEXT.CHOOSE_FILE" | translate }}
     </button>
-    <input
-      hidden
-      (change)="onFileSelected($event)"
-      #fileInput
-      type="file"
-    />
+    <input hidden (change)="onFileSelected($event)" #fileInput type="file" />
     <span class="file-name">{{ selectedFile?.name }}</span>
   </div>
 </mat-dialog-content>
 <mat-dialog-actions class="dialog-actions" align="end">
-  <button mat-button (click)="dialogRef.close()">Cancel</button>
+  <button mat-button (click)="dialogRef.close()">
+    {{ "INPUT_TEXT.CANCEL" | translate }}
+  </button>
   <button
     mat-raised-button
     color="primary"
     [disabled]="emailData.email == '' || emailData.subject == ''"
     (click)="sendEmailWithAttachment()"
   >
-    Send
+    {{ "MODALS.SEND" | translate }}
   </button>
 </mat-dialog-actions>
