--- a/src/app/components/prepared-recipe-history/prepared-recipe-history.component.html
+++ b/src/app/components/prepared-recipe-history/prepared-recipe-history.component.html
@@ -1,31 +1,46 @@
 <div class="container">
   <div class="back_button_container">
-    <button mat-button color="primary" (click)="goBack()">Back</button>
+    <button mat-button color="primary" (click)="goBack()">
+      {{ "INPUT_TEXT.BACK" | translate }}
+    </button>
   </div>
   <div class="tabs">
     <button mat-raised-button (click)="changeTab('tab1')">
-      Istoric Ingrediente
+      {{ "STATISTICS.INGREDIENTS" | translate }}
     </button>
     <button mat-raised-button (click)="changeTab('tab2')">
-      Istoric Preparate
+      {{ "STATISTICS.PRODUCTS" | translate }}
     </button>
   </div>
 
   <div *ngIf="activeTab === 'tab1'">
     <div class="filter-container">
       <mat-form-field class="filter-field">
-        <mat-label>Filter</mat-label>
-        <input matInput (keyup)="applyFilter($event)" #input />
+        <mat-label>{{ "INPUT_TEXT.FILTER" | translate }}</mat-label>
+        <input
+          matInput
+          (keyup)="applyFilter($event)"
+          #input
+          [placeholder]="'INPUT_TEXT.FILTER_PLACEHOLDER' | translate"
+        />
       </mat-form-field>
       <div class="action-dropdown">
         <button mat-raised-button [matMenuTriggerFor]="menu" color="primary">
-          Actions
+          {{ "INPUT_TEXT.ACTIONS" | translate }}
         </button>
         <mat-menu #menu="matMenu" class="action-menu">
-          <button mat-menu-item (click)="openEmailModal()">Send Email</button>
-          <button mat-menu-item (click)="exportToCSV()">Export CSV</button>
-          <button mat-menu-item (click)="exportToXLSX()">Export XLSX</button>
-          <button mat-menu-item (click)="exportToPDF()">Export PDF</button>
+          <button mat-menu-item (click)="openEmailModal()">
+            {{ "INPUT_TEXT.SEND_EMAIL" | translate }}
+          </button>
+          <button mat-menu-item (click)="exportToCSV()">
+            {{ "INPUT_TEXT.EXPORT_CSV" | translate }}
+          </button>
+          <button mat-menu-item (click)="exportToXLSX()">
+            {{ "INPUT_TEXT.EXPORT_XLSX" | translate }}
+          </button>
+          <button mat-menu-item (click)="exportToPDF()">
+            {{ "INPUT_TEXT.EXPORT_PDF" | translate }}
+          </button>
           <button
             mat-menu-item
             [useExistingCss]="true"
@@ -33,7 +48,7 @@
             ngxPrint
             styleSheetFile="assets/css/print-table.css"
           >
-            Print Table
+            {{ "INPUT_TEXT.PRINT_TABLE" | translate }}
           </button>
         </mat-menu>
       </div>
@@ -43,19 +58,23 @@
       <table mat-table [dataSource]="dataSource" matSort>
         <!-- Ingredient Name Column -->
         <ng-container matColumnDef="ingredientName">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header>Name</th>
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>
+            {{ "CATEGORY.NAME" | translate }}
+          </th>
           <td mat-cell *matCellDef="let row">{{ row.ingredientName }}</td>
         </ng-container>
         <!-- Amount Column -->
         <ng-container matColumnDef="quantity.amount">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header>Amount</th>
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>
+            {{ "INGREDIENT.AMOUNT" | translate }}
+          </th>
           <td mat-cell *matCellDef="let row">{{ row.quantity.amount }}</td>
         </ng-container>
 
         <!-- Date of Purchase Column -->
         <ng-container matColumnDef="quantity.dateOfPurchase">
           <th mat-header-cell *matHeaderCellDef mat-sort-header>
-            Date of Purchase
+            {{ "INGREDIENT.DATE_OF_PURCHASE" | translate }}
           </th>
           <td mat-cell *matCellDef="let row">
             {{ row.quantity.dateOfPurchase | date : "yyyy-MM-dd" }}
@@ -64,7 +83,7 @@
         <!-- Expiring Date Column -->
         <ng-container matColumnDef="quantity.expiringDate">
           <th mat-header-cell *matHeaderCellDef mat-sort-header>
-            Expiring Date
+            {{ "INGREDIENT.EXPIRING_DATE" | translate }}
           </th>
           <td mat-cell *matCellDef="let row">
             {{ row.quantity.expiringDate | date : "yyyy-MM-dd" }}
@@ -72,14 +91,18 @@
         </ng-container>
         <!-- Price/Unit Column -->
         <ng-container matColumnDef="quantity.price">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header>Price/Unit</th>
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>
+            {{ "INGREDIENT.PRICE" | translate }}
+          </th>
           <td mat-cell *matCellDef="let row">
             {{ convertPrice(row.quantity.price, row.quantity.currency) }}
           </td>
         </ng-container>
         <!-- Unit Column -->
         <ng-container matColumnDef="quantity.unit">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header>Unit</th>
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>
+            {{ "INGREDIENT.UNIT" | translate }}
+          </th>
           <td mat-cell *matCellDef="let row">{{ row.quantity.unit }}</td>
         </ng-container>
 
@@ -91,10 +114,7 @@
       <div *ngIf="isLoading" class="loading-circle-container">
         <mat-spinner diameter="100"></mat-spinner>
       </div>
-      <mat-paginator
-        [pageSizeOptions]="[10, 25, 100]"
-        aria-label="Select page of users"
-      ></mat-paginator>
+      <mat-paginator [pageSizeOptions]="[10, 25, 100]"></mat-paginator>
     </div>
   </div>
   <div *ngIf="activeTab === 'tab2'">
@@ -105,13 +125,21 @@
       </mat-form-field>
       <div class="action-dropdown">
         <button mat-raised-button [matMenuTriggerFor]="menu" color="primary">
-          Actions2
+          {{ "INPUT_TEXT.ACTIONS" | translate }}
         </button>
         <mat-menu #menu="matMenu" class="action-menu">
-          <button mat-menu-item (click)="openEmailModal()">Send Email</button>
-          <button mat-menu-item (click)="exportToCSV()">Export CSV</button>
-          <button mat-menu-item (click)="exportToXLSX()">Export XLSX</button>
-          <button mat-menu-item (click)="exportToPDF()">Export PDF</button>
+          <button mat-menu-item (click)="openEmailModal()">
+            {{ "INPUT_TEXT.SEND_EMAIL" | translate }}
+          </button>
+          <button mat-menu-item (click)="exportToCSV()">
+            {{ "INPUT_TEXT.EXPORT_CSV" | translate }}
+          </button>
+          <button mat-menu-item (click)="exportToXLSX()">
+            {{ "INPUT_TEXT.EXPORT_XLSX" | translate }}
+          </button>
+          <button mat-menu-item (click)="exportToPDF()">
+            {{ "INPUT_TEXT.EXPORT_PDF" | translate }}
+          </button>
           <button
             mat-menu-item
             [useExistingCss]="true"
@@ -119,7 +147,7 @@
             ngxPrint
             styleSheetFile="assets/css/print-table.css"
           >
-            Print Table
+            {{ "INPUT_TEXT.PRINT_TABLE" | translate }}
           </button>
         </mat-menu>
       </div>
@@ -129,12 +157,16 @@
       <table mat-table [dataSource]="dataSource2" matSort>
         <!-- Recipe Name Column -->
         <ng-container matColumnDef="recipeName">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header>Name</th>
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>
+            {{ "CATEGORY.NAME" | translate }}
+          </th>
           <td mat-cell *matCellDef="let row">{{ row.recipeName }}</td>
         </ng-container>
         <!-- Amount Column -->
         <ng-container matColumnDef="preparedRecipe.amount">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header>Amount</th>
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>
+            {{ "INGREDIENT.AMOUNT" | translate }}
+          </th>
           <td mat-cell *matCellDef="let row">
             {{ row.preparedRecipe.amount }}
           </td>
@@ -148,10 +180,7 @@
       <div *ngIf="isLoading" class="loading-circle-container">
         <mat-spinner diameter="100"></mat-spinner>
       </div>
-      <mat-paginator
-        [pageSizeOptions]="[10, 25, 100]"
-        aria-label="Select page of users"
-      ></mat-paginator>
+      <mat-paginator [pageSizeOptions]="[10, 25, 100]"></mat-paginator>
     </div>
   </div>
 </div>
