--- a/src/app/components/recipe/recipe-table/recipe.component.html
+++ b/src/app/components/recipe/recipe-table/recipe.component.html
@@ -1,14 +1,24 @@
 <div class="container">
   <div class="back_button_container">
-    <button mat-button color="primary" (click)="goBack()">Back</button>
+    <button mat-button color="primary" (click)="goBack()">
+      {{ "INPUT_TEXT.BACK" | translate }}
+    </button>
   </div>
   <div class="title_container">
-    <span *ngIf="categoryId !== 1">Category</span> {{ categoryName }}
+    <span *ngIf="categoryId !== 1">
+      {{ "INGREDIENT.CATEGORY" | translate }}</span
+    >
+    {{ categoryName }}
   </div>
   <div class="filter-container">
     <mat-form-field class="filter-field">
-      <mat-label>Filter</mat-label>
-      <input matInput (keyup)="applyFilter($event)" #input />
+      <mat-label>{{ "INPUT_TEXT.FILTER" | translate }}</mat-label>
+      <input
+        matInput
+        (keyup)="applyFilter($event)"
+        #input
+        [placeholder]="'INPUT_TEXT.FILTER_PLACEHOLDER' | translate"
+      />
     </mat-form-field>
 
     <button
@@ -17,7 +27,7 @@
       class="add-recipe-button"
       (click)="goToRecipeCreate()"
     >
-      Add Recipe
+      {{ "RECIPE.ADD_RECIPE" | translate }}
     </button>
   </div>
 
@@ -31,7 +41,9 @@
 
       <!-- Picture Column -->
       <ng-container matColumnDef="picture">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Picture</th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>
+          {{ "INGREDIENT.PICTURE" | translate }}
+        </th>
         <td mat-cell *matCellDef="let row">
           <img
             [src]="
@@ -45,21 +57,25 @@
       </ng-container>
       <!-- Name Column -->
       <ng-container matColumnDef="name">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Name</th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>
+          {{ "CATEGORY.NAME" | translate }}
+        </th>
         <td mat-cell *matCellDef="let row">{{ row.name }}</td>
       </ng-container>
 
       <!-- Short Description Column -->
       <ng-container matColumnDef="shortDescription">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>
-          Short Description
+          {{ "CATEGORY.DESCRIPTION" | translate }}
         </th>
         <td mat-cell *matCellDef="let row">{{ row.shortDescription }}</td>
       </ng-container>
 
       <!-- Category Column -->
       <ng-container matColumnDef="category">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Category</th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>
+          {{ "INGREDIENT.CATEGORY" | translate }}
+        </th>
         <td mat-cell *matCellDef="let row">
           <ng-container
             *ngIf="row.recipeCategories && row.recipeCategories.length > 0"
@@ -71,7 +87,7 @@
           <ng-container
             *ngIf="!row.recipeCategories || row.recipeCategories.length === 0"
           >
-            <span>No categories</span>
+            <span>{{ "RECIPE.NO_CATEGORIES" | translate }}</span>
           </ng-container>
         </td>
       </ng-container>
@@ -82,21 +98,17 @@
         *matRowDef="let row; columns: displayedColumns"
         (click)="goToRecipeDetails(row.id)"
         class="recipe-row"
-      >
-      </tr>
+      ></tr>
 
       <tr class="mat-row" *matNoDataRow>
         <td class="mat-cell" colspan="4">
-          No data matching the filter "{{ input.value }}"
+          {{ "INPUT_TEXT.NO_DATA" | translate }} "{{ input.value }}"
         </td>
       </tr>
     </table>
     <div *ngIf="isLoading" class="loading-circle-container">
       <mat-spinner diameter="100"></mat-spinner>
     </div>
-    <mat-paginator
-      [pageSizeOptions]="[5, 10, 25, 100]"
-      aria-label="Select page of users"
-    ></mat-paginator>
+    <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]"></mat-paginator>
   </div>
 </div>
