feat translate notifications

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -72,7 +72,7 @@
         "AUTH.LOGIN" | translate
       }}</a>
       <a href="/register" class="navbar__register-login-btn btn btn-default">{{
-        "AUTH.LOGIN" | translate
+        "AUTH.REGISTER" | translate
       }}</a>
     </div>
   </div>
