--- a/src/app/components/prepared-recipe-history/prepared-recipe-history.component.scss
+++ b/src/app/components/prepared-recipe-history/prepared-recipe-history.component.scss
@@ -12,7 +12,29 @@
   padding: 10px;
 
   .tabs {
-    padding: 15px 0;
+    display: flex;
+    border-bottom: 1px solid #ccc;
+    margin-bottom: 15px;
+  }
+
+  .tabs button {
+    margin: 0;
+    padding: 10px 20px;
+    border: none;
+    background: none;
+    cursor: pointer;
+    outline: none;
+    transition: background-color 0.3s;
+  }
+
+  .tabs button.active-tab {
+    border-bottom: 2px solid #007bff; /* Linia de jos pentru tab-ul activ */
+    font-weight: bold;
+    background-color: #f0f0f0; /* Fundal diferit pentru tab-ul activ */
+  }
+
+  .tabs button:hover {
+    background-color: #e0e0e0; /* Fundal pe hover */
   }
 
   .action-dropdown {
