feat forgot passport + feat consumption prediction diagram

--- a/src/app/components/auth/login/login.component.scss
+++ b/src/app/components/auth/login/login.component.scss
@@ -5,6 +5,11 @@
   display: flex;
   flex-direction: column;
 
+  .buttons_container {
+    display: flex;
+    justify-content: space-between;
+  }
+
   .login_title {
     margin-bottom: 15px;
     font-size: 20px;
