--- a/src/app/components/auth/login/login.component.html
+++ b/src/app/components/auth/login/login.component.html
@@ -32,22 +32,26 @@
             }}</mat-icon>
           </mat-icon-button>
         </mat-form-field>
-        <button
-          mat-raised-button
-          color="primary"
-          type="submit"
-          class="btn btn-primary"
-          [disabled]="isLoading"
-        >
-          <i
-            class="fa"
-            [ngClass]="{
+        <div class="buttons_container">
+          <button
+            mat-raised-button
+            color="primary"
+            type="submit"
+            class="btn btn-primary"
+            [disabled]="isLoading"
+          >
+            <i
+              class="fa"
+              [ngClass]="{
               'fas fa-spin fa-spinner': isLoading,
             }"
-          ></i>
-          {{ "AUTH.LOGIN" | translate }}
-        </button>
-        <!-- <button mat-button (click)="forgotPassword()">Forgot Password</button> -->
+            ></i>
+            {{ "AUTH.LOGIN" | translate }}
+          </button>
+          <button mat-button (click)="forgotPassword()">
+            {{ "AUTH.FORGOT_PASSWORD" | translate }}
+          </button>
+        </div>
         <div *ngIf="error" class="error">{{ error }}</div>
       </form>
     </mat-card-content>
