--- a/src/app/components/consumption-prediction-chart/consumption-prediction-chart.component.html
+++ b/src/app/components/consumption-prediction-chart/consumption-prediction-chart.component.html
@@ -1,1 +1,15 @@
+<div>
+  <mat-form-field>
+    <input
+      matInput
+      type="text"
+      [(ngModel)]="filterValue"
+      (input)="filterData()"
+      placeholder="Search"
+    />
+  </mat-form-field>
+  <button mat-raised-button color="primary" (click)="clearFilter()">
+    {{ "CHART.CLEAR" | translate }}
+  </button>
+</div>
 <div id="chart-container"></div>
