--- a/src/app/components/navbar/navbar.component.scss
+++ b/src/app/components/navbar/navbar.component.scss
@@ -3,7 +3,7 @@
   flex-wrap: wrap;
   align-items: center;
   padding: 4px 16px;
-  background: #3f51b5;
+  background-color: var(--navbar-color);
   margin-bottom: 30px;
   box-shadow: 0 3px 5px -1px #0003, 0 6px 10px #00000024, 0 1px 18px #0000001f;
 
@@ -59,11 +59,11 @@
   }
 
   input:checked + .slider {
-    background-color: #2196f3;
+    background-color: #3f51b5;
   }
 
   input:focus + .slider {
-    box-shadow: 0 0 1px #2196f3;
+    box-shadow: 0 0 1px #3f51b5;
   }
 
   input:checked + .slider:before {
