--- a/src/app/components/prepared-recipe-history/prepared-recipe-history.component.scss
+++ b/src/app/components/prepared-recipe-history/prepared-recipe-history.component.scss
@@ -28,13 +28,14 @@
   }
 
   .tabs button.active-tab {
-    border-bottom: 2px solid #007bff; /* Linia de jos pentru tab-ul activ */
+    border-bottom: 2px solid #3f51b5;
     font-weight: bold;
-    background-color: #f0f0f0; /* Fundal diferit pentru tab-ul activ */
+    background-color: #f0f0f0;
+    color: var(--background-activ-tab) !important;
   }
 
   .tabs button:hover {
-    background-color: #e0e0e0; /* Fundal pe hover */
+    background-color: #e0e0e0;
   }
 
   .action-dropdown {
